# Sci-Fi-Parser

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
Dev Documentantion/Data extraction/: OCR.md  VLM.md
Dev Documentantion/Data input and classificiation/: Classifier.md  DataLoader.md
doclingTesting/: doclingLayer.py  main.py
src/sci_fi_parser/: main.py  test.py
src/sci_fi_parser/vlm/: __init__.py  backend.py
src/sci_fi_parser/vlm/models/: __init__.py  paddleocr.py
tests/: test_smoke.py
